--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="m-0"><img class="me-1 rounded-circle position-sticky" src="img/images-120x1203.png" width="60" height="60"  alt="Icon"><span class="text-white">White</span><span class="text-primary">Worth</span></h1>
+            <h1 class="m-0"><img class="me-1  position-sticky rounded-circle" src="img/images-120x1203.png" width="60" height="60"  alt="Icon"><span class="text-white">White</span><span class="text-primary">Worth</span></h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -664,61 +664,167 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-body me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+    <div class="container-fluid bg-dark text-light mt-5">
+        <div class="container">
+            <div class="row gx-5">
+                <div class="col-lg-4 col-md-6  ">
+                    <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-gradient p-4">
+                        <a href="index.html" class="navbar-brand">
+                            <h1 class="m-0 text-white"> <img  class="rounded-circle"
+                                src="img/images-120x1203.png" width="60" height="60" alt=""> Whiteworth</h1>
+                        </a>
+                        <p class="mt-3 mb-4">Whiteworth was founded on the principle that sophisticated legal and
+                            taxation services should be simple, modern, and inexpensive. We can serve our clients
+                            more
+                            efficiently thanks to cutting-edge practise technology. </p>
+                        <form action="">
+                            <div class="input-group">
+                                <input type="text" class="form-control border-white p-3" placeholder="Your Email">
+                                <button class="btn btn-dark">Sign Up</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Services</h3>
-                    <a class="btn btn-link" href="">financial</a>
-                    <a class="btn btn-link" href="">3D Animation</a>
-                    <a class="btn btn-link" href="">House Planning</a>
-                    <a class="btn btn-link" href="">Interior Design</a>
-                    <a class="btn btn-link" href="">Construction</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Quick Links</h3>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Newsletter</h3>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                <div class="col-lg-8 col-md-6">
+                    <div class="row gx-5">
+                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                                <h3 class="text-light mb-0">Company Services</h3>
+                            </div>
+                            <div class="link-animated d-flex flex-column justify-content-start">
+                                <a class="text-light mb-2" href="private-limited-company-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Private Limited
+                                    Registration</a>
+                                <a class="text-light mb-2" href="llp-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Limited Liability
+                                    Partnership
+                                    (LLP)</a>
+                                <a class="text-light mb-2" href="opc-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>One Person
+                                    Company</a>
+                                <a class="text-light mb-2" href="msme-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>MSME
+                                    Registration</a>
+                                <a class="text-light mb-2" href="iso-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>ISO
+                                    Registration</a>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                                <h3 class="text-light mb-0">Registration</h3>
+                            </div>
+                            <div class="link-animated d-flex flex-column justify-content-start">
+                                <a class="text-light mb-2" href="drug-license.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Drug License</a>
+                                <a class="text-light mb-2" href="import-export-code-iec-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Import Export
+                                    Code</a>
+                                <a class="text-light mb-2" href="trademark-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Trademark
+                                    Registration</a>
+                                <a class="text-light mb-2" href="partnership-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Patent
+                                    Registration</a>
+                                <a class="text-light mb-2" href="esi-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>ESI
+                                    Registration</a>
+                            </div>
+                        </div>
+
+
+
+                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                                <h3 class="text-light mb-0">TAXATION</h3>
+                            </div>
+                            <div class="link-animated d-flex flex-column justify-content-start">
+                                <a class="text-light mb-2" href="income-tax-return.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>Income Tax
+                                    Return</a>
+                                <a class="text-light mb-2" href="tds-return.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>TDS Return</a>
+                                <a class="text-light mb-2" href="gst-registration.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>GST
+                                    Registration</a>
+                                <a class="text-light mb-2" href="gst-return.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>GST Return</a>
+                                <a class="text-light mb-2" href="gst-software.html"><i
+                                        class="fa fa-light fa-arrow-right text-primary me-2"></i>GST Software</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row gx-5">
+                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
+                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                                <h3 class="text-light mb-0">Delhi Offices</h3>
+                            </div>
+                            <div class="d-flex mb-2">
+                                <i class="fa fa-location-dot mt-1 text-primary me-2"></i>
+                                <p class="mb-0">B-300 Saraswati Vihar,Pitampura, New Delhi-110034</p>
+                            </div>
+                            <div class="d-flex mb-2">
+                                <i class="fa fa-solid fa-envelope-open-text text-primary me-2"></i>
+                                <a href="mailto:contact@legalraasta.com">
+                                    <p class="mb-0  text-decoration-none text-light">contact@legalraasta.com</p>
+                                </a>
+                            </div>
+                            <div class="d-flex mb-2">
+                                <a href="tel:+918750008585">
+                                    <p class="mb-0 text-decoration-none text-white"><i
+                                            class="fa fa-phone-volume mt-1 text-primary me-2"></i>+918750008585</p>
+                                </a>
+                            </div>
+                            <div class="d-flex mt-4">
+                                <a class="btn btn-primary btn-square me-2" href="https://twitter.com/RaastaLegal"
+                                    aria-label="Twitter"><i class="fab fa-twitter fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.facebook.com/LRaasta"
+                                    aria-label="facebook"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2"
+                                    href="https://www.linkedin.com/company/legalraasta/mycompany/"
+                                    aria-label="linkedn"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-danger btn-square" href="https://www.instagram.com/legal.raasta/"
+                                    aria-label="instagram"><i class="fab fa-instagram fw-normal"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
+                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                                <h3 class="text-light mb-0">Location</h3>
+                            </div>
+
+                            <div class="link-animated d-flex flex-column justify-content-start">
+                                <!-- <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.6768508825953!2d77.12176301456115!3d
+                            28.699311687807384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d03c53679bedb%3A0x3624ba574fcc7425!2
+                           sLegal%20Raasta%20Technologies%20Private%20Limited!5e0!3m2!1sen!2sin!4v1676637382453!5m2!1sen!2sin"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe> -->
+                                <a
+                                    href="https://www.google.com/maps/place/Legal+Raasta+Technologies+Private+Limited/@28.699307,77.1170229,16z/data=!4m10!1m2!2m1!1sLegalRaasta+Technologies+Pvt+Ltd!3m6!1s0x390d03c53679bedb:0x3624ba574fcc7425!8m2!3d28.699307!4d77.1239517!15sCiBMZWdhbFJhYXN0YSBUZWNobm9sb2dpZXMgUHZ0IEx0ZCIDiAEBkgEObGVnYWxfc2VydmljZXPgAQA!16s%2Fg%2F11c0xvwdmk"><img
+                                        src="img/map.webp" aria-label="Maps" loading="lazy" alt="map"
+                                        style="width:20rem;height:18rem;"></a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
+        <div class="container-fluid bg-dark text-light mt-5">
+            <div class="container container-fluid bg-dark text-light mt-5">
+                <div class="row gx-5">
+                  <p class="prg_style">By continuing past this page, you agree to our <a href="terms-and-conditions.html">Terms and Conditions</a> 
+                    <a href="privacy-policy.html">Privacy Policy</a> and <a href="refund-policy.html">Refund Policy</a>  | Copyright © 2015-2023 LegalRaasta.com| All Rights Reserved  
+                  </p>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Footer End -->
 
 
