--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link text-white ">About</a>
                 <a href="service.html" class="nav-item nav-link text-white">Services</a>
+                <a href="service2.html" class="nav-item nav-link text-white">Services 2</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu border-0 m-0">
