--- a/service2.html
+++ b/service2.html
@@ -42,7 +42,7 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/iconssd/icon-1.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -89,10 +89,10 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
+    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light spy-lg-0 px-lg-5 "
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="m-0"><img class="me-1  position-sticky rounded-circle" src="img/images-120x1203.png" width="60"
+            <h1 class="m-0"><img class="me-1 rounded-circle" src="img/images-120x1203.png" width="60"
                     height="60" alt="Icon"><span class="text-white">White</span><span class="text-primary">Worth</span>
             </h1>
         </a>
@@ -138,18 +138,18 @@
 
     <!-- Page navigation Navroot -->
       
-            <div class="col-11 mx-auto fs-4 mb-5 position-sticky bg-white" style="z-index: 1;;font-family:'Teko','sans-serif';top:90px; ">
-                <div id="list-example" class="list-group d-flex flex-row  my-auto bg-dark text-dark "
+            <div class="col-12 mx-auto fs-4 mb-5 position-sticky bg-white" style="z-index: 1;;font-family:'Teko','sans-serif';top:5px; ">
+                <div id="list-example" class="list-group d-flex flex-row text-dark border-primary mx-2 "
                     style="border-style:outset">
-                    <a class="list-group-item  list-group-item-action text-dark my-1 check customa_active"
+                    <a class="list-group-item  list-group-item-action text-dark  check customa_active"
                         href="#overview">Overview</a>
-                    <a class="list-group-item list-group-item-action text-dark my-1 check" href="#service">Service</a>
-                    <a class="list-group-item list-group-item-action text-dark my-1 check" href="#faq">FAQ</a>
-                    <a class="list-group-item list-group-item-action text-dark my-1  check"
+                    <a class="list-group-item list-group-item-action text-dark  check" href="#service">Service</a>
+                    <a class="list-group-item list-group-item-action text-dark  check" href="#faq">FAQ</a>
+                    <a class="list-group-item list-group-item-action text-dark   check"
                         href="#requirement">Requirement</a>
-                    <a class="list-group-item list-group-item-action text-dark my-1 check"
+                    <a class="list-group-item list-group-item-action text-dark  check"
                         href="#duration">Duration</a>
-                    <!-- <a class="list-group-item list-group-item-action text-dark my-1   check" href="#renewal">Renewal</a> -->
+                    <!-- <a class="list-group-item list-group-item-action text-dark    check" href="#renewal">Renewal</a> -->
                 </div>
             </div>
         
@@ -182,7 +182,7 @@
             <div class="col-lg-9 col-sm-8 col-12 ">
                 <div class="container-xxl py-5  nav-item bg-white" id="overview">
                     <div class="section-title text-center  mx-auto faq">
-                        <h1 class="display-5 mb-2">Overview</h1><br>
+                        <h1 class="display-3 mb-2">Overview</h1><br>
                     </div>
                     <div class="col-lg-12 fs-4 px-3"
                         style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align:justify;">
@@ -235,8 +235,8 @@
                 <div class="container-xxl nav-item py-5 bg-white" id="service">
                     <div class="container">
                         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                            <h4 class="section-title">Our Services</h4>
-                            <h1 class="display-5 mb-4">We Focused on Provide Best Service To Client</h1>
+                            <h4 class=" display-3">Our Services</h4>
+                            <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best Service To Client</h1>
                         </div>
                         <div class="row g-4">
                             <div class="col-lg-6 col-md-6">
@@ -308,7 +308,7 @@
                 <!-- FAQ Start -->
                 <div class="section-title nav-item text-center position-relative pb-3 mb-5 mx-auto faq" id="faq"
                     style="max-width: 1200px;">
-                    <h1 class="mb-0">Frequently Asked Questions</h1><br>
+                    <h1 class="mb-0 display-5">Frequently Asked Questions</h1><br>
                 </div>
                 <div class="accordion faq px-lg-5 mx-lg-5" id="accordionExample">
                     <div class="accordion-item">
@@ -412,7 +412,7 @@
             <!-- column2 -->
             <div class="col-lg-3  d-lg-block d-none position-relative">
                 <div class="col-12 col-lg-12 pt-3 text-center  position-sticky border border-3 border-primary  justify-content-center"
-                    style="top:170px;border-style:outset">
+                    style="top:70px;border-style:outset">
                     <div class="w-100 rounded-3 px-0  bg-white mt-sm-auto ">
 
                         <div class="px-5">
