update in Service

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light sticky-top py-lg-0 px-lg-5>
+    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light sticky-top py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="m-0 d-flex flex-row"><img class="me-1  position-sticky rounded-circle" src="img/logo120.png.png" width="80" height="80" loading="lazy" alt="Icon">
-                <span class="mt-4"><span class="text-white">White</span><span class="text-primary">Worth</span></span></h1>
+            <h1 class="m-0 d-flex flex-row"><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png" width="230" height="80" loading="lazy" alt="Icon">
+                </h1>
         </a>
         <button type="button" class="navbar-toggler me-4" aria-label="hamburger" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="fa fa-bars text-white"></span>
@@ -89,13 +89,13 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link text-white ">About</a>
-                <a href="service.html" class="nav-item nav-link text-white">Services</a>
-                <a href="service2.html" class="nav-item nav-link text-white">Services 2</a>
+                <!-- <a href="service.html" class="nav-item nav-link text-white"></a>
+                <a href="service2.html" class="nav-item nav-link text-white">Services 2</a> -->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Service Page</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Our Features</a>
-                        <a href="project.html" class="dropdown-item">Our Projects</a>
+                        <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a>
+                        <a href="corporate-tax.html" class="dropdown-item">Corporate Tax</a>
                         <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative  bg-dark" data-dot="<img src='img/slider-img.webp'alt=''>">
-                <img class="img-fluid mw-100 " src="img/slider-img.webp"  alt="">
+            <div class="owl-carousel-item position-relative  bg-dark" data-dot="<img src='img/doing-business-in-dubai-dos-and-donts.jpg\'alt=''>">
+                <img class="img-fluid mw-100 fa fa-flip-horizontal" src="img/doing-business-in-dubai-dos-and-donts.jpg"  alt="">
                 <div class="owl-carousel-inner ">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -160,7 +160,7 @@
     <!-- Carousel End -->
     <div class="container-fluid px-4 py-5 bg-dark ">
         <!-- <img class="img-fluid mw-100  " src="img/Slider-img2.webp" alt=""> -->
-        <h1 class="text-white display-1 "><span class="text-white">White</span><span class="text-primary">Worth</span> </h1>
+        <!-- <h1 class="text-white display-1 "><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png" width="230" height="80" loading="lazy" alt="Icon"> </h1> -->
         <ul class="text-white fw-bold list-unstyled">
             <li>Bank Account Assistance </li>
             <li>Hassle Free Business Setup </li>
