Update the Service

--- a/corporate-tax.html
+++ b/corporate-tax.html
@@ -147,8 +147,8 @@
                         href="#DOCUMENTS">DOCUMENTS</a>
                     <a class="list-group-item list-group-item-action text-dark  check"
                         href="#Benefits">Benefits</a>
-                    <a class="list-group-item list-group-item-action text-dark  check"
-                        href="#Conclusion">Conclusion</a>
+                    <!-- <a class="list-group-item list-group-item-action text-dark  check"
+                        href="#Conclusion">Conclusion</a> -->
                     <!-- <a class="list-group-item list-group-item-action text-dark    check" href="#renewal">Renewal</a> -->
                 </div>
             </div>
@@ -182,8 +182,9 @@
             <div class="col-lg-9 col-sm-8 col-12 ">
                 <div class="container-xxl py-5  nav-item bg-white" id="overview">
                     <div class="text-center  mx-auto faq">
-                        <h1 class="display-3 mb-2">Introduction to Corporate Tax Services
-                        </h1><br>
+                        <h4 class="display-3 mb-2">Introduction to Corporate Tax Services
+                        </h4>
+                        <p style="height: 6px; background-color: #B78D65; max-width: 40rem; margin: auto; transition: 0.5 ease-in-out;"></p> <br>
                     </div>
                     <div class="col-lg-12 px-3 text-dark">
                         <p>Global media outlets have paid close attention to the UAE Ministry of Finance's announcement regarding the introduction of Corporate Federal Tax (CIT) on corporate profits beginning on June 1st, 2023. The implementation of Corporate Tax is a critical step towards the nation's goal of developing into a leading international business hub while promoting transformation in numerous areas. UAE is now on par with other GCC nations who have already adopted the Corporate Federal Tax as a result of this action.</p>
@@ -197,7 +198,7 @@
                     <div class="container">
                         <div class="text-center mx-auto mb-5" >
                             <h4 class=" display-3 text-capitalize">Rates of Corporate Taxes in UAE </h4>
-                            <!-- <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best benefit To Client</h1> -->
+                            <p style="height: 6px; background-color: #B78D65; max-width: 32rem; margin: auto; transition: 0.5 ease-in-out;"></p>
                         </div>
                         <div class="row g-4">
                             <div class="col-lg-12 ">
@@ -284,8 +285,9 @@
                 <!-- process  -->
                 <div class="container-xxl nav-item bg-white" id="PROCESS">
                     <div class="container">
-                        <div class="text-center section-title d-flex flex-column justify-content-center mx-auto" style="max-width: 600px;">
+                        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
                             <h4 class="display-3 ">Process</h4>
+                            <p style="height: 6px; background-color: #B78D65; max-width: 12rem; margin: auto; transition: 0.5 ease-in-out;"></p>
                             
                             <!-- <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best benefit To Client</h1> -->
                         </div>
@@ -340,6 +342,8 @@
                     <div class="container">
                         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
                             <h4 class=" display-3 ">Documents Requirement</h4>
+                            <p style="height: 6px; background-color: #B78D65; max-width: 29rem; margin: auto; transition: 0.5 ease-in-out;"></p>
+
                             <!-- <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best benefit To Client</h1> -->
                         </div>
                         <div class="row g-4">
@@ -374,6 +378,8 @@
                     <div class="container">
                         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
                             <h4 class=" display-3">Benefits</h4>
+                            <p style="height: 6px; background-color: #B78D65; max-width: 12rem; margin: auto; transition: 0.5 ease-in-out;"></p>
+
                             <!-- <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best benefit To Client</h1> -->
                         </div>
                         <div class="row g-4">
