--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light sticky-top py-lg-0 px-lg-5">
+    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 class="m-0 d-flex flex-row"><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png" width="230" height="80" loading="lazy" alt="Icon">
                 </h1>
@@ -100,15 +100,18 @@
                         <a href="corporate-tax.html" class="dropdown-item">Corporate Tax</a>
                         <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
+                        <a href="sitemap.html" class="dropdown-item">Sitemap</a>
+                        <a href="company-formation-cost-uae.html" class="dropdown-item ">Company Formation in UAE</a>
+                        <!-- <a href="dubai-free-zone.html" class="dropdown-item active">Establishing a business in Dubai Free Zone</a> -->
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link text-white">Contact</a>
             </div>
-           
+            
         </div>
-    </nav>
+        </nav>
     <!-- Navbar End -->
 
 
@@ -131,7 +134,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative  bg-dark" data-dot="<img src='img/doing-business-in-dubai-dos-and-donts.jpg'alt=''>">
-                <img class="img-fluid mw-100 fa fa-flip-horizontal" src="img/doing-business-in-dubai-dos-and-donts.jpg"  alt="">
+                <img class="img-fluid mw-100 fa fa-flip-horizontal" src="img/doing-business-in-dubai-dos-and-donts.jpg" style="object-view-box:inset(25% 11% 16% 0%);" alt="">
                 <div class="owl-carousel-inner ">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -145,7 +148,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/Slider-img2.webp'alt=''>">
-                <img class="img-fluid mw-100  " src="img/Slider-img2.webp" alt="" >
+                <img class="img-fluid mw-100  " src="img/Slider-img2.webp" style="object-view-box:inset(25% 11% 0% 0%);" alt="" >
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
